# forecasting_ts_demo

./: .gitignore  README.md  pyproject.toml  todo.md
config/: data.yaml  model.yaml  training.yaml
data/: create_mixed_chunks_streaming.py  create_train_val_test_splits.py  merge_parquet_files.py
data/analysis/: analyze_cross_dataset_similarity.py  analyze_missing_data.py  analyze_start_times_relationships.py  analyze_temporal_patterns.py  analyze_value_statistics.py
data_processing/: __init__.py  dataloader.py  dataset.py  preprocessing.py  samplers.py  utils.py
model/: moirai.py
monitor_and_setup/: __init__.py
tests/: __init__.py  test_dataset.py  test_dataset_sampling.py  test_integration.py  test_preprocessing.py  test_samplers.py  test_utils.py
train/: __init__.py  pipeline.py  run_train.py  train_minimal.py
