[project]
name = "ts-forecasting"
version = "0.1.0"
description = "Time series forecasting model training pipeline"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.5.0",
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "pyarrow>=18.0.0",
    "wandb>=0.18.0",
    "cudf-cu12>=25.10.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

